fixed image overflow

--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -18,11 +18,13 @@
     color: #333;
     margin-bottom: 1rem;
     padding-left: 40px;
+
 }
 .containImage{
 
     height: 350px;
     width: 350px;
+    overflow: hidden;
    
 
 
@@ -34,6 +36,7 @@
     border-radius: 50%;
     border: 2px solid #3333338e;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.219);
+
     
 
 }
